--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "motion-v": "^1.6.1",
     "nuxt": "^4.0.1",
     "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "4.4.1",
     "reka-ui": "^2.4.0",
     "shadcn-nuxt": "2.2.0",
     "tailwind-merge": "^3.3.1",
@@ -41,9 +42,10 @@
     "vaul-vue": "^0.4.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
-    "vue-sonner": "^2.0.2"
+    "vue-sonner": "1.3.0"
   },
   "devDependencies": {
+    "@iconify-json/lucide": "^1.2.59",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3"
   }
