--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --fix"
   },
   "dependencies": {
+    "@iconify/vue": "^5.0.0",
     "@nuxt/eslint": "1.7.1",
     "@nuxt/fonts": "0.11.4",
     "@nuxt/icon": "1.15.0",
