--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/fonts": "0.11.4",
     "@nuxt/icon": "1.15.0",
     "@nuxt/image": "1.10.0",
+    "@nuxtjs/sitemap": "^7.4.3",
     "@pinia/nuxt": "0.11.2",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/vue-table": "^8.21.3",
