--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@iconify-json/lucide": "^1.2.59",
+    "@iconify-json/mdi": "^1.2.3",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3"
   }
